Alternate style for selects

--- a/scss/extend/_variables.scss
+++ b/scss/extend/_variables.scss
@@ -15,3 +15,5 @@ $shadeOrange:     #f0ad4e;  $shadeDarkOrange: #eea236;
 $shadeRed:        #d9534f;  $shadeDarkRed:    #d43f3a;
 //=========================Custom .btn-notice==========================
 $shadePurple:     #9783b9;  $shadeDarkPurple: #6f5499;
+//========================Form controls active=========================
+$shadeLightBlue:  #66afe9;
