--- a/css/bootstrap-extend.css
+++ b/css/bootstrap-extend.css
@@ -2693,3 +2693,25 @@ ol.ord li:before {
   background-color: #9783b9;
   border: 1px solid #6f5499;
 }
+
+/* line 4, ../scss/extend/_select.scss */
+select.slct {
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  padding: 5px 35px 5px 5px;
+  height: 32px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background: url(res/select-arrow.png) 96%/15% no-repeat #fff;
+}
+/* line 13, ../scss/extend/_select.scss */
+select.slct:hover, select.slct:focus, select.slct.focus, select.slct:active {
+  border: 1px solid #66afe9;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
+}
+/* line 18, ../scss/extend/_select.scss */
+select.slct.disabled, select.slct.disabled:hover, select.slct.disabled:focus, select.slct.disabled.focus, select.slct.disabled:active, select.slct[disabled], select.slct[disabled]:hover, select.slct[disabled]:focus, select.slct[disabled].focus, select.slct[disabled]:active, fieldset[disabled] select.slct, fieldset[disabled] select.slct:hover, fieldset[disabled] select.slct:focus, fieldset[disabled] select.slct.focus, fieldset[disabled] select.slct:active {
+  cursor: not-allowed;
+  opacity: .65;
+}
